@@ -1,3 +1,15 @@
+2010-07-29  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Adam Roben.
+
+        check-webkit-style shouldn't complain about NPAPI functions
+        https://bugs.webkit.org/show_bug.cgi?id=43211
+
+        Allow underscores in functions that start with NPN_, NPP_ or NP_.
+
+        * Scripts/webkitpy/style/checkers/cpp.py:
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
+
 2010-07-29  Victor Wang  <victorw@chromium.org>
 
         Unreviewed, rolling out r64270.
